--- a/SignClassification.ipynb
+++ b/SignClassification.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
     "import os\n",
-    "\n",
     "import random\n",
+    "\n",
     "import albumentations as A\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
     "        self.idx_to_class = self._create_label_mapping()\n",
     "        \n",
     "    def _create_label_mapping(self):\n",
-    "        return {idx: name for idx, name in enumerate(class_names)}\n",
+    "        return {idx: name for idx, name in enumerate(class_names)} # type: ignore\n",
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.images_path_list)\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -511,10 +511,11 @@
    "source": [
     "train_loader = DataLoader(trafficSign_train, batch_size=32, shuffle=True, num_workers=0)\n",
     "\n",
-    "model = TrafficSignCNN(num_classes=12)\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = model.to(device=device)\n",
     "print(f\"Using device: {device}\")\n",
+    "\n",
+    "model = TrafficSignCNN(num_classes=12)\n",
+    "model = model.to(device=device)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)"
@@ -771,6 +772,13 @@
     "\n",
     "\n",
     "torch.save(model.state_dict(), \"traffic_sign_cnn.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validation"
    ]
   },
   {
