save before change

--- a/frameExtracter.ipynb
+++ b/frameExtracter.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
+    "import re\n",
     "import cv2\n",
     "from tqdm import tqdm"
    ]
@@ -33,16 +33,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Completed:  parking_zone_raw.mp4 - 973\n",
-      "Completed:  priority_over_raw.mp4 - 933\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "video_files = [f for f in os.listdir(input_dir)]\n",
     "\n",
@@ -91,64 +82,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = r'Dataset\\Frame'\n",
-    "output_dir = r'Dataset\\Crop'\n",
+    "base_dir = r'Dataset'\n",
     "\n",
-    "# Vertical crop range\n",
     "y1 = 420\n",
     "y2 = 1500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing images:   0%|          | 0/951 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing images: 100%|██████████| 951/951 [01:32<00:00, 10.32it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img_files = [f for f in os.listdir(input_dir) if f.endswith(('.jpg', '.jpeg', '.png'))]\n",
-    "\n",
-    "for filename in tqdm(img_files, desc=\"Processing images\"):\n",
+    "for folder in os.listdir((base_dir)):\n",
+    "        input_dir = os.path.join(base_dir, folder)\n",
+    "        if not os.path.isdir(input_dir):\n",
+    "                continue\n",
     "        \n",
-    "        img_path = os.path.join(input_dir, filename)\n",
-    "        img = cv2.imread(img_path)\n",
+    "        output_dir = os.path.join(base_dir, folder + \"_cropped\")\n",
+    "        \n",
+    "        if not os.path.exists(output_dir):\n",
+    "                os.makedirs(output_dir)\n",
+    "        \n",
     "\n",
-    "        cropped_img = img[y1:y2, :]\n",
+    "        img_files = [f for f in os.listdir(input_dir) if f.lower().endswith(('.jpg', '.jpeg', '.png'))]\n",
     "\n",
-    "        output_path = os.path.join(output_dir, filename)\n",
-    "        cv2.imwrite(output_path, cropped_img)\n",
+    "        for filename in tqdm(img_files, desc=f\"Processing {folder}\", unit=\"file\"):\n",
+    "                \n",
+    "                img_path = os.path.join(input_dir, filename)\n",
+    "                img = cv2.imread(img_path)\n",
+    "                \n",
+    "                if img is None:\n",
+    "                    print(f\"Error reading image: {img_path}\")\n",
+    "                    continue\n",
+    "\n",
+    "                cropped_img = img[y1:y2, :]\n",
+    "\n",
+    "                output_path = os.path.join(output_dir, filename)\n",
+    "                cv2.imwrite(output_path, cropped_img)\n",
+    "\n",
+    "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Renaming the Frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_dir = r'Dataset'\n",
+    "\n",
+    "def natural_sort_key(s):\n",
+    "    return [int(text) if text.isdigit() else text.lower() \n",
+    "            for text in re.split(r'(\\d+)', s)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for folder in tqdm(os.listdir(base_dir), desc=\"Processing folders\", unit=\"folder\"):\n",
+    "    folder_path = os.path.join(base_dir, folder)\n",
+    "    \n",
+    "    if not os.path.isdir(folder_path):\n",
+    "        continue\n",
+    "\n",
+    "    img_files = [f for f in os.listdir(folder_path) \n",
+    "                if f.lower().endswith(('.jpg', '.jpeg', '.png'))\n",
+    "                and not re.match(r'^frame_\\d{4}\\..+$', f)]\n",
+    "    \n",
+    "    if not img_files:\n",
+    "        continue\n",
+    "\n",
+    "    img_files.sort(key=natural_sort_key)\n",
+    "    temp_dir = os.path.join(folder_path, \"temp_renumber\")\n",
+    "    os.makedirs(temp_dir, exist_ok=True)\n",
+    "\n",
+    "    for filename in tqdm(img_files, desc=f\"Moving '{folder}' files\", unit=\"file\"):\n",
+    "        src = os.path.join(folder_path, filename)\n",
+    "        dst = os.path.join(temp_dir, filename)\n",
+    "        os.rename(src, dst)\n",
+    "\n",
+    "    temp_files = sorted(os.listdir(temp_dir), key=natural_sort_key)\n",
+    "    for idx, filename in enumerate(tqdm(temp_files, desc=f\"Renaming '{folder}'\", unit=\"file\"), 1):\n",
+    "        ext = os.path.splitext(filename)[1].lower()\n",
+    "        new_name = f\"frame_{idx:04d}{ext}\"\n",
+    "        os.rename(os.path.join(temp_dir, filename),\n",
+    "                 os.path.join(folder_path, new_name))\n",
+    "\n",
+    "    os.rmdir(temp_dir)\n",
     "\n",
     "print(\"Done!\")"
    ]
