fixed dataset stats extraction

--- a/SignClassification.ipynb
+++ b/SignClassification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,156 +27,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mean/Std of Dataset"
+    "## Dataset Stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_dataset_stats(dataset_dir):\n",
+    "    sum_r = sum_g = sum_b = 0.0\n",
+    "    sum_sq_r = sum_sq_g = sum_sq_b = 0.0\n",
+    "    total_pixels = 0\n",
+    "    processed_files = 0\n",
+    "    problematic_files = []\n",
+    "\n",
+    "    total_images = 0\n",
+    "    for class_dir in os.listdir(dataset_dir):\n",
+    "        class_path = os.path.join(dataset_dir, class_dir)\n",
+    "        if os.path.isdir(class_path):\n",
+    "            total_images += len([f for f in os.listdir(class_path) \n",
+    "                               if f.lower().endswith(('.png', '.jpg', '.jpeg'))])\n",
+    "\n",
+    "    with tqdm(total=total_images, desc=\"Processing Images\", \n",
+    "             unit=\"img\", dynamic_ncols=True, ascii=\"->\") as pbar:\n",
+    "        \n",
+    "        for class_dir in os.listdir(dataset_dir):\n",
+    "            class_path = os.path.join(dataset_dir, class_dir)\n",
+    "            if not os.path.isdir(class_path):\n",
+    "                continue\n",
+    "\n",
+    "            for img_name in os.listdir(class_path):\n",
+    "                img_path = os.path.join(class_path, img_name)\n",
+    "                \n",
+    "                if not img_name.lower().endswith(('.png', '.jpg', '.jpeg')):\n",
+    "                    problematic_files.append(f\"{img_path} - Not an image\")\n",
+    "                    pbar.update(1)\n",
+    "                    continue\n",
+    "                \n",
+    "                try:\n",
+    "                    img = cv2.imread(img_path)\n",
+    "                    if img is None:\n",
+    "                        raise ValueError(\"OpenCV failed to read image\")\n",
+    "                        \n",
+    "                    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "                    if img.dtype != np.uint8:\n",
+    "                        raise ValueError(f\"Unexpected dtype: {img.dtype}\")\n",
+    "                        \n",
+    "                    img = img.astype(np.float32) / 255.0\n",
+    "                    \n",
+    "                    sum_r += np.sum(img[:, :, 0])\n",
+    "                    sum_g += np.sum(img[:, :, 1])\n",
+    "                    sum_b += np.sum(img[:, :, 2])\n",
+    "                    \n",
+    "                    sum_sq_r += np.sum(np.square(img[:, :, 0]))\n",
+    "                    sum_sq_g += np.sum(np.square(img[:, :, 1]))\n",
+    "                    sum_sq_b += np.sum(np.square(img[:, :, 2]))\n",
+    "                    \n",
+    "                    total_pixels += img.shape[0] * img.shape[1]\n",
+    "                    processed_files += 1\n",
+    "\n",
+    "                except Exception as e:\n",
+    "                    problematic_files.append(f\"{img_path} - {str(e)}\")\n",
+    "                \n",
+    "                finally:\n",
+    "                    pbar.update(1)\n",
+    "                    pbar.set_postfix({\n",
+    "                        'Processed': processed_files,\n",
+    "                        'Errors': len(problematic_files),\n",
+    "                        'Current': os.path.basename(class_dir)\n",
+    "                    })\n",
+    "\n",
+    "    if total_pixels == 0:\n",
+    "        raise ValueError(\"No valid images processed - check dataset path or file formats\")\n",
+    "\n",
+    "    mean = [\n",
+    "        round(sum_r / total_pixels, 5),\n",
+    "        round(sum_g / total_pixels, 5),\n",
+    "        round(sum_b / total_pixels, 5)\n",
+    "    ]\n",
+    "    \n",
+    "    std = [\n",
+    "        round(np.sqrt((sum_sq_r / total_pixels) - (mean[0] ** 2)), 5),\n",
+    "        round(np.sqrt((sum_sq_g / total_pixels) - (mean[1] ** 2)), 5),\n",
+    "        round(np.sqrt((sum_sq_b / total_pixels) - (mean[2] ** 2)), 5)\n",
+    "    ]\n",
+    "\n",
+    "    print(\"\\nValidation Summary:\")\n",
+    "    print(f\"Total images attempted: {total_images}\")\n",
+    "    print(f\"Successfully processed: {processed_files}\")\n",
+    "    print(f\"Problematic files: {len(problematic_files)}\")\n",
+    "    \n",
+    "    if problematic_files:\n",
+    "        print(\"\\nFirst 5 errors:\")\n",
+    "        for error in problematic_files[:5]:\n",
+    "            print(f\" - {error}\")\n",
+    "\n",
+    "    return mean, std"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum_r, sum_g, sum_b = 0.0, 0.0, 0.0\n",
-    "sum_sq_r, sum_sq_g, sum_sq_b = 0.0, 0.0, 0.0\n",
-    "total_pixels = 0\n",
-    "total_img = 0\n",
-    "\n",
-    "dataset_dir = 'Dataset'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Images:   0%|          | 0/6719 [00:00<?, ?img/s]"
+      "Processing Images: 100%|>>>>>>>>>>| 6719/6719 [04:25<00:00, 25.27img/s, Processed=6719, Errors=0, Current=turn_right]               "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of images: 6719\n"
+      "\n",
+      "Validation Summary:\n",
+      "Total images attempted: 6719\n",
+      "Successfully processed: 6719\n",
+      "Problematic files: 0\n",
+      "\n",
+      "Dataset Statistics:\n",
+      "Dataset Mean (RGB): [0.57121, 0.57445, 0.60535]\n",
+      "Dataset Std (RGB): [0.11756, 0.12333, 0.11987]\n",
+      "\n",
+      "Basic validation checks passed!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "for class_name in os.listdir(dataset_dir):\n",
-    "    class_path = os.path.join(dataset_dir, class_name)\n",
-    "    if os.path.isdir(class_path):\n",
-    "        total_img += len(os.listdir(class_path))\n",
+    "dataset_dir = 'Dataset'\n",
+    "mean, std = calculate_dataset_stats(dataset_dir)\n",
     "\n",
-    "Progress_bar = tqdm(total=total_img, desc=\"Processing Images\", unit=\"img\")\n",
-    "print(f\"Total number of images: {total_img}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing Images:  15%|█▍        | 988/6719 [00:47<04:24, 21.63img/s]"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m     14\u001b[0m img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(img, cv2\u001b[38;5;241m.\u001b[39mCOLOR_BGR2RGB)\n\u001b[1;32m---> 15\u001b[0m img \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m     17\u001b[0m sum_r \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(img[:, :, \u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m     18\u001b[0m sum_g \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(img[:, :, \u001b[38;5;241m1\u001b[39m])\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing Images:  15%|█▍        | 990/6719 [01:00<04:24, 21.63img/s]"
-     ]
-    }
-   ],
-   "source": [
-    "for class_name in os.listdir(dataset_dir):\n",
-    "    class_path = os.path.join(dataset_dir, class_name)\n",
-    "    if not os.path.isdir(class_path):\n",
-    "        continue\n",
-    "    \n",
-    "    for img_name in os.listdir(class_path):\n",
-    "        img_path = os.path.join(class_path, img_name)\n",
-    "        img = cv2.imread(img_path)\n",
-    "        if img is None:\n",
-    "            print(f\"Failed to load: {img_path}\")\n",
-    "            Progress_bar.update(1)\n",
-    "            continue\n",
-    "        \n",
-    "        img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "        img = img.astype(np.float32)\n",
-    "        \n",
-    "        sum_r += np.sum(img[:, :, 0])\n",
-    "        sum_g += np.sum(img[:, :, 1])\n",
-    "        sum_b += np.sum(img[:, :, 2])\n",
-    "        \n",
-    "        sum_sq_r += np.sum(img[:, :, 0] ** 2)\n",
-    "        sum_sq_g += np.sum(img[:, :, 1] ** 2)\n",
-    "        sum_sq_b += np.sum(img[:, :, 2] ** 2)\n",
-    "        \n",
-    "        total_pixels += img.shape[0] * img.shape[1]\n",
-    "        Progress_bar.update(1)\n",
-    "        \n",
-    "Progress_bar.close()"
+    "dataset_mean = [round(float(m), 5) for m in mean]\n",
+    "dataset_std = [round(float(s), 5) for s in std]\n",
+    "\n",
+    "print(\"\\nDataset Statistics:\")\n",
+    "print(\"Dataset Mean (RGB):\", dataset_mean)\n",
+    "print(\"Dataset Std (RGB):\", dataset_std)\n",
+    "\n",
+    "assert all(0 <= m <= 1 for m in dataset_mean), \"Mean values out of [0,1] range\"\n",
+    "assert all(0 <= s <= 1 for s in dataset_std), \"Std values out of [0,1] range\"\n",
+    "\n",
+    "assert abs(mean[0]*255 - 0.57119 * 255) < 0.1, \"Red mean mismatch\"\n",
+    "assert abs(mean[1]*255 - 0.57445 * 255) < 0.1, \"Green mean mismatch\"\n",
+    "assert abs(mean[2]*255 - 0.60537 * 255) < 0.1, \"Blue mean mismatch\"\n",
+    "\n",
+    "assert abs(std[0]*255 - 0.11762 * 255) < 0.1, \"Red std mismatch\"\n",
+    "assert abs(std[1]*255 - 0.12342 * 255) < 0.1, \"Green std mismatch\"\n",
+    "assert abs(std[2]*255 - 0.11999 * 255) < 0.1, \"Blue std mismatch\"\n",
+    "\n",
+    "print(\"\\nBasic validation checks passed!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset Mean (RGB): [0.57119, 0.57445, 0.60537]\n",
-      "Dataset Std (RGB): [0.11762, 0.12342, 0.11999]\n"
-     ]
-    }
-   ],
-   "source": [
-    "mean_r = sum_r / total_pixels\n",
-    "mean_g = sum_g / total_pixels\n",
-    "mean_b = sum_b / total_pixels\n",
-    "\n",
-    "std_r = np.sqrt((sum_sq_r / total_pixels) - (mean_r ** 2))\n",
-    "std_g = np.sqrt((sum_sq_g / total_pixels) - (mean_g ** 2))\n",
-    "std_b = np.sqrt((sum_sq_b / total_pixels) - (mean_b ** 2))\n",
-    "\n",
-    "mean = [mean_r / 255, mean_g / 255, mean_b / 255]\n",
-    "std = [std_r / 255, std_g / 255, std_b / 255]\n",
-    "\n",
-    "dataset_mean = [round(float(i), 5) for i in mean]\n",
-    "dataset_std = [round(float(j), 5) for j in std]\n",
-    "\n",
-    "print(f\"Dataset Mean (RGB): {dataset_mean}\")\n",
-    "print(f\"Dataset Std (RGB): {dataset_std}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_mean = [0.57119, 0.57445, 0.60537]\n",
-    "dataset_std = [0.11762, 0.12342, 0.11999]\n",
+    "dataset_mean = [0.57121, 0.57445, 0.60535]\n",
+    "dataset_std = [0.11756, 0.12333, 0.11987]\n",
     "\n",
     "imageNet_mean = [0.485, 0.456, 0.406]\n",
     "imageNet_std = [0.229, 0.224, 0.225]"
@@ -246,8 +266,8 @@
     "        #     p=0.2\n",
     "        # ),\n",
     "        A.Normalize(\n",
-    "            mean=dataset_mean,\n",
-    "            std=dataset_std\n",
+    "            mean=tuple(dataset_mean),\n",
+    "            std=tuple(dataset_std)\n",
     "        )\n",
     "    ],\n",
     "    p=1\n",
