previous model failed, saving before change

--- a/frameExtracter.ipynb
+++ b/frameExtracter.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
+    "\n",
     "import cv2\n",
     "from tqdm import tqdm"
    ]
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +151,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Moving 'barred_area' files: 100%|██████████| 626/626 [00:00<00:00, 724.26file/s]\n",
+      "Renaming 'barred_area': 100%|██████████| 626/626 [00:00<00:00, 1638.75file/s]\n",
+      "Moving 'cross_walk' files: 100%|██████████| 599/599 [00:00<00:00, 1360.83file/s]\n",
+      "Renaming 'cross_walk': 100%|██████████| 599/599 [00:00<00:00, 1374.33file/s]\n",
+      "Moving 'go_straight' files: 100%|██████████| 509/509 [00:00<00:00, 1786.71file/s]\n",
+      "Renaming 'go_straight': 100%|██████████| 509/509 [00:00<00:00, 1175.27file/s]\n",
+      "Moving 'no_passing_zone_beginning' files: 100%|██████████| 575/575 [00:00<00:00, 1816.98file/s]\n",
+      "Renaming 'no_passing_zone_beginning': 100%|██████████| 575/575 [00:00<00:00, 1173.84file/s]\n",
+      "Moving 'parking_zone' files: 100%|██████████| 503/503 [00:00<00:00, 1494.87file/s]\n",
+      "Renaming 'parking_zone': 100%|██████████| 503/503 [00:00<00:00, 1498.08file/s]\n",
+      "Moving 'priority_over' files: 100%|██████████| 591/591 [00:00<00:00, 1418.95file/s]\n",
+      "Renaming 'priority_over': 100%|██████████| 591/591 [00:00<00:00, 1682.17file/s]\n",
+      "Moving 'steep_hill_downhill' files: 100%|██████████| 453/453 [00:00<00:00, 1183.52file/s]\n",
+      "Renaming 'steep_hill_downhill': 100%|██████████| 453/453 [00:00<00:00, 1696.26file/s]\n",
+      "Moving 'steep_hill_uphill' files: 100%|██████████| 505/505 [00:00<00:00, 1378.34file/s]\n",
+      "Renaming 'steep_hill_uphill': 100%|██████████| 505/505 [00:00<00:00, 1451.96file/s]\n",
+      "Moving 'stop' files: 100%|██████████| 568/568 [00:00<00:00, 643.01file/s]\n",
+      "Renaming 'stop': 100%|██████████| 568/568 [00:00<00:00, 1145.53file/s]\n",
+      "Moving 'tunnel_beginning' files: 100%|██████████| 619/619 [00:00<00:00, 1524.59file/s]\n",
+      "Renaming 'tunnel_beginning': 100%|██████████| 619/619 [00:00<00:00, 1561.49file/s]\n",
+      "Moving 'turn_left' files: 100%|██████████| 598/598 [00:00<00:00, 1556.70file/s]\n",
+      "Renaming 'turn_left': 100%|██████████| 598/598 [00:00<00:00, 1053.18file/s]\n",
+      "Moving 'turn_right' files: 100%|██████████| 573/573 [00:00<00:00, 1077.90file/s]\n",
+      "Renaming 'turn_right': 100%|██████████| 573/573 [00:00<00:00, 1039.58file/s]\n",
+      "Processing folders: 100%|██████████| 12/12 [00:10<00:00,  1.11folder/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for folder in tqdm(os.listdir(base_dir), desc=\"Processing folders\", unit=\"folder\"):\n",
     "    folder_path = os.path.join(base_dir, folder)\n",
@@ -187,6 +234,13 @@
     "\n",
     "print(\"Done!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
